<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Back" />

    <TextView
        android:id="@+id/leaderboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="Leaderboard" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@id/leaderboardTitle"
        android:layout_marginStart="50sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="#1 "
        android:background="#f52891cc"
        android:textSize='20sp' />

    <TextView
        android:id="@+id/player2"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@id/player1"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:background="#f52891cc"
        android:textAlignment="center"
        android:text="#2"
        android:textSize='20sp' />

    <TextView
        android:id="@+id/player3"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@id/player2"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:background="#f52891cc"
        android:textAlignment="center"
        android:text="#3"
        android:textSize='20sp' />

    <TextView
        android:id="@+id/player4"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@id/player3"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:background="#f52891cc"
        android:textAlignment="center"
        android:text="#4"
        android:textSize='20sp' />

    <TextView
        android:id="@+id/player5"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@id/player4"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:background="#f52891cc"
        android:textAlignment="center"
        android:text="#5"
        android:textSize='20sp' />
    <TextView
        android:id="@+id/errorBox"
        android:layout_below="@id/player5"
        android:layout_marginTop="20sp"
        android:layout_marginStart="50sp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text=""
        android:textSize='20sp'
        android:textAlignment="center"/>

    <Button
        android:id="@+id/allPlayersButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@id/errorBox"
        android:layout_marginStart="35dp"
        android:text="All Players" />
    <Button
        android:id="@+id/orgsButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@id/errorBox"
        android:layout_marginStart="230dp"
        android:text="Clans" />

    <Button
        android:id="@+id/myOrgButton"
        android:layout_width="150sp"
        android:layout_height="45sp"
        android:layout_below="@id/allPlayersButton"
        android:layout_marginTop="10sp"
        android:layout_marginStart="35sp"
        android:text="My Clan" />
    <Button
        android:id="@+id/myFriendsButton"
        android:layout_width="150sp"
        android:layout_height="45sp"
        android:layout_below="@id/allPlayersButton"
        android:layout_marginTop="10sp"
        android:layout_marginStart="230sp"
        android:text="My Friends" />


</RelativeLayout>